--- a/src/sass/elements/_links.scss
+++ b/src/sass/elements/_links.scss
@@ -81,21 +81,7 @@ a {
 	}
 	
 	.news-more {
-	    
 	    @include buttonstyle();
-	    /*
-		color: var(--color-primary-basis-kontrast);
-		background: var(--color-primary-basis);
-		padding: 6px 10px;
-		text-decoration: none;
-		@include border-radius(3px);
-		@include px2rem($font-size-textbuttons);
-		
-		
-		&:hover, &:focus {
-			background: var(--color-primary-dunkler);
-		}
-		*/
 	}
 }
 
@@ -108,50 +94,21 @@ a {
 	bottom: 20px; 
 	right: 20px;
 
-	 @include buttonstyle(4px);
-	 /*
-	background: var(--color-primary-basis);
-	color: var(--color-primary-basis-kontrast);
-	padding: 7px;
-	@include border-radius(4px);
-	
-	&:hover, 
-	&:focus {
-		background: var(--color-primary-dunkelste);
-	}
-	*/
+	@include buttonstyle(4px);
+
 	display: none;
 
 }
 
 // Additional link effects for Content
+.portalpage-content,
+.content-inline {
+    p {
 
-main {
-    p, dd, dt, ul, li, td, tr {
-	
-	
 	a {
-	    text-decoration: underline;
-	    text-decoration-color: var(--color-primary-basis);
-	}
-	a:active,
-	a:focus, 
-	a:hover {
-	   font-weight: bold;
+	    @include styledcontentlink();
 	}
 
-	a:focus {
-	    outline-style: solid;
-	    outline-color: var(--color-primary-basis);
-	    outline-width: 2px;
-	    @media (prefers-reduced-motion: no-preference) {
-		transition: outline-offset .25s ease-in-out;
-	    }
-	    outline-offset: 4px;
-	}
-	
-	
-	
     }
     a.media-img {
 	display: inline-block;
@@ -203,67 +160,3 @@ main {
 	}
 }
 
-
-	
-/*
-Not used variants:
-
-:not(.fau-person) a {
-	    text-decoration: none;	    
-	    box-shadow: inset 0 -1px 0 $colorPrimary;
-	    border-bottom: 1px solid $colorPrimary;
-	    transition: box-shadow 0.2s ease-in-out;
-	}
-	:not(.fau-person) a:focus,
-	:not(.fau-person) a:hover {
-	    box-shadow: inset 0 -28px 0 var(--color-primary-heller);
-	    color: white;
-	}
-	
-
-// or based on idea of https://codepen.io/giuliamalaroda/pen/QBOGdG
-
-
-a:not(.media-img) {
-	      text-decoration-color: var(--color-primary-basis);;
-		position: relative;
-		z-index: 0;
-		display: inline-block;
-		overflow: hidden;
-		color: var(--color-primary-basis);;
-		vertical-align: bottom;
-		transition: color .3s ease-out;
-		text-decoration: none;
-
-	      
-	}
-	a:not(.media-img)::before {
-	       content: "";
-		position: absolute;
-		z-index: -1;
-		top: 0;
-		left: 0;
-		transform: translateY(calc(100% - 2px));
-		width: 100%;
-		height: 100%;
-		background-image: linear-gradient(60deg, $colorPrimary 0%, var(--color-primary-heller) 100%);
-		transition: transform .25s ease-out;
-		
-	}
-	
-	a:not(.media-img):focus,
-	a:not(.media-img):hover { 
-	    color: #fff;
-	}
-	 a:not(.media-img):focus::before,
-	 a:not(.media-img):hover::before {
-	       transform: translateY(0);
-	 }
-	@media (prefers-reduced-motion: no-preference) {
-	    a:not(.media-img):focus::before,
-	    a:not(.media-img):hover::before {
-	       transition: transform .25s ease-out;
-	    }
-	}
-
-	*/
