--- a/src/sass/structure/content/_organigramm.scss
+++ b/src/sass/structure/content/_organigramm.scss
@@ -34,13 +34,10 @@
 	}
 	
 	a {
-		text-decoration: none;
+		@include defaultlinkstyle();
 	}
 	
-	a:hover, a:focus {
-		text-decoration: underline;
-	}
-	
+
 
 	
 	.toggle-icon {
