--- a/src/sass/elements/_quotes.scss
+++ b/src/sass/elements/_quotes.scss
@@ -33,7 +33,7 @@ blockquote {
 	#content & {
 		font-style: italic;
 		margin: 10px;
-		padding: 20px;
+		padding: 31px 20px 20px 20px;
 		min-height: 50px;
 		border-left: 10px solid var(--color-primary-ci-hell);
 		
@@ -43,7 +43,7 @@ blockquote {
 		
 		@media (min-width: $screen-sm) {
 		    margin: 10px 50px;
-		    padding: 20px 40px;
+		    padding: 31px 40px 20px 40px;
 		}
 		
 		p,h1,h2,h3,h4,h5,h6 {
@@ -110,7 +110,7 @@ blockquote {
 cite {
     color: var(--color-Text); 
     font-weight: normal;
-    font-style: normal;
+    font-style: italic;
     
     &.text {
 	color: inherit;
