--- a/src/sass/mixins/_mixins.scss
+++ b/src/sass/mixins/_mixins.scss
@@ -172,6 +172,40 @@ Mixins File for Wordpress Theme FAU
 
 }
 
+@mixin defaultlinkstyle() {
+    box-shadow: inherit;
+    transition: inherit;
+    padding: inherit;
+    text-decoration: underline;
+
+    &:hover,
+    &:focus {
+	font-weight: bold;
+	color: inherit;
+    }
+}
+
+@mixin styledcontentlink() {
+    cursor: pointer;
+	    
+    word-wrap: break-word;
+    color: var(--color-content-links);
+    box-shadow: inset 0 -2px 0 var(--color-content-links-underline);
+//    border-bottom: 1px solid var(--color-content-links-underline);
+    transition: box-shadow 0.3s ease-in-out;
+    text-decoration: none;
+    padding: 3px 1px;
+//	    padding-bottom: 3px;
+//	     padding-top: 3px;
+
+    &:focus,
+    &:hover {
+	text-decoration: none;
+	color: var(--color-content-links-hover);
+	box-shadow: inset 0 -28px 0  var(--color-content-links-underline);
+    }
+}
+
 @mixin buttonstyle($radius: 3px) {
     @include inline-block;
     @include border-radius($radius);
