--- a/src/sass/structure/content/_posts.scss
+++ b/src/sass/structure/content/_posts.scss
@@ -1,6 +1,7 @@
 /*-----------------------------------------------------------------------------------*/
 /* Post Content
 /*-----------------------------------------------------------------------------------*/
+@use "sass:math";
 
 .post-image {
     text-align: center;
@@ -44,7 +45,7 @@
 .post-meta {
 	    display: block;
 	    padding: 5px 0;
-	    margin: 0 0 14px 0;
+	    margin: 0 0 floor(math.div($grid-gutter-width, 2)) 0;
     
 	    color: var(--color-primary-basis);
 	    font-family: $fontStack;
@@ -52,6 +53,7 @@
 }
 
 .meta-footer {
+    margin-top: floor(math.div($grid-gutter-width, 2));
      @include px2rem($font-size-content-meta);
 }
 
